terraform/sg.tf
resource "aws_security_group" "sg_ec2a" {
  name        = "sgec2a"
  description = "Allow SSH Inbound"
  vpc_id      = aws_vpc.main.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["192.168.1.0/24"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sgec2a"
  }
}
